Horizontal scroll fix

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,6 +8,7 @@
   margin: 0 auto 0 auto;
   max-width: 1280px;
   box-sizing: border-box;
+  overflow-x: hidden;
   font-family: 'Inter', Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
